buildscript {
    repositories {
        maven {
            url 'https://plugins.gradle.org/m2/'
        }
    }

    dependencies {
        classpath 'com.github.jengelman.gradle.plugins:shadow:6.1.0'
    }
}

plugins {
    id 'com.github.johnrengelman.shadow' version '6.1.0'
    id 'com.adarshr.test-logger' version '3.2.0'
    id 'java'
    id 'checkstyle'
}

group 'daq-validator'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.9

sourceSets {
    main {
        java {
            srcDirs '../gencode/java'
        }
    }
}

checkstyle {
    ignoreFailures = false
    maxWarnings = 50
}
checkstyleMain.source = 'src/main/java'

jar {
    manifest {
        attributes 'Main-Class': 'com.google.daq.mqtt.validator.Validator'
    }
}

shadowJar {
    mergeServiceFiles()
}

repositories {
    mavenCentral()
    mavenLocal()
    maven { url 'https://mvnrepository.com' }
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation group: 'org.slf4j', name: 'slf4j-simple', version:'1.7.5'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.4'
    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.11.0'
    implementation group: 'com.github.java-json-tools', name: 'json-schema-validator', version: '2.2.14'
    implementation 'io.jsonwebtoken:jjwt:0.7.0'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
    implementation 'com.google.guava:guava:30.1.1-jre'
    implementation 'com.google.cloud:google-cloud-logging:2.3.2'
    implementation ('com.google.apis:google-api-services-cloudiot:v1-rev20210323-1.31.0') {
      exclude group: 'com.google.guava', module: 'guava-jdk5'
    }
    implementation 'commons-io:commons-io:2.5'

    implementation 'com.google.cloud:google-cloud-pubsub:1.66.0'
    implementation 'com.google.cloud:google-cloud-firestore:0.84.0-beta'
    implementation group: 'junit', name: 'junit', version: '4.13.2'
}
